--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li><span class="status" id="empty-status"></span><a href="archives/0.9.1/empty.html">empty.html</a> - Empty iframe page</li>
                 <li><span class="status" id="main-status"></span><a href="archives/0.9.1/cpython312/main.js">cpython312/main.js</a> - Python interpreter</li>
                 <li><span class="status" id="vtx-status"></span><a href="archives/0.9.1/vtx.js">vtx.js</a> - Terminal support</li>
-                <li><span class="status" id="vt-status"></span><a href="archives/0.9.1/vt.js/">vt/</a> - Terminal assets</li>
+                <li><span class="status" id="vt-status"></span><a href="archives/0.9.1/vt/">vt/</a> - Terminal assets</li>
             </ul>
         </div>
         
@@ -97,7 +97,7 @@
             { id: 'empty-status', url: 'archives/0.9.1/empty.html' },
             { id: 'main-status', url: 'archives/0.9.1/cpython312/main.js' },
             { id: 'vtx-status', url: 'archives/0.9.1/vtx.js' },
-            { id: 'vt-status', url: 'archives/0.9.1/vt.js/' }
+            { id: 'vt-status', url: 'archives/0.9.1/vt/xterm.js/' }
         ];
         
         files.forEach(file => {
