--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             { id: 'empty-status', url: 'archives/0.9.1/empty.html' },
             { id: 'main-status', url: 'archives/0.9.1/cpython312/main.js' },
             { id: 'vtx-status', url: 'archives/0.9.1/vtx.js' },
-            { id: 'vt-status', url: 'archives/0.9.1/vt/xterm.js/' }
+            { id: 'vt-status', url: 'archives/0.9.1/vt/xterm.js' }
         ];
         
         files.forEach(file => {
